[gd_scene load_steps=30 format=3 uid="uid://chm130uqryl6h"]

[ext_resource type="Script" uid="uid://d4ngq53ps21fb" path="res://Scripts/Player/player_controller.gd" id="1_v0iea"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="2_h4iuc"]
[ext_resource type="Script" uid="uid://clujqmphyddce" path="res://Scripts/Player/mainCamera.gd" id="2_x3wgy"]
[ext_resource type="Script" uid="uid://djrtec3h30rrb" path="res://Scripts/grapple_raycast.gd" id="3_3smsa"]
[ext_resource type="Script" uid="uid://frdsybu7hke6" path="res://Scripts/SprintLines.gd" id="3_6t5aa"]
[ext_resource type="PackedScene" uid="uid://k084lfp5hf4e" path="res://Scenes/rope.tscn" id="3_fkybt"]
[ext_resource type="Script" uid="uid://cbs4m60oaudqi" path="res://Scripts/interaction_raycast.gd" id="5_v5tf8"]
[ext_resource type="Script" uid="uid://cerp0bpsnvw7j" path="res://Scripts/Player/mouse_capture.gd" id="7_v5tf8"]
[ext_resource type="Script" uid="uid://dwds2i66mc6ld" path="res://Scripts/grapple_controller.gd" id="8_aa115"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="8_pu2lt"]
[ext_resource type="Script" uid="uid://c1vp0ojjvaby1" path="res://addons/godot_state_charts/parallel_state.gd" id="9_ukyrk"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="10_7dp3o"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="11_h4iuc"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="12_fd4e3"]
[ext_resource type="Script" uid="uid://8h2wr0sonbnp" path="res://Scripts/Player/States/grounded_state.gd" id="12_qfo01"]
[ext_resource type="Script" uid="uid://bqpvgq7gd4teb" path="res://Scripts/Player/state_machine.gd" id="13_7dp3o"]
[ext_resource type="Script" uid="uid://bu8vx8nr47cc1" path="res://Scripts/Player/States/idle_state.gd" id="14_h4iuc"]
[ext_resource type="Script" uid="uid://d23tqnc4mn4pc" path="res://Scripts/Player/States/moving_state.gd" id="16_fd4e3"]
[ext_resource type="Script" uid="uid://n8pscjihh3pa" path="res://Scripts/Player/States/walking_state.gd" id="17_igrcy"]
[ext_resource type="Script" uid="uid://hsn1hmj47fc6" path="res://Scripts/Player/States/standing_state.gd" id="18_at6cw"]
[ext_resource type="Script" uid="uid://o68krs1ufhiu" path="res://Scripts/Player/States/sprinting_state.gd" id="18_fs7ks"]
[ext_resource type="Script" uid="uid://dh4erm7d0gfsa" path="res://Scripts/Player/States/crouching_state.gd" id="19_60tbe"]
[ext_resource type="Script" uid="uid://dcgjywhqkp2jw" path="res://Scripts/Player/States/base_state.gd" id="19_qugqj"]
[ext_resource type="Script" uid="uid://ctdnfrld4ytjv" path="res://Scripts/Player/States/airborne_state.gd" id="19_v5tf8"]
[ext_resource type="Script" uid="uid://5ieerecn1uwm" path="res://Scripts/Player/States/sliding_state.gd" id="20_aa115"]

[sub_resource type="SphereShape3D" id="SphereShape3D_60tbe"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_cvnsp"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_6t5aa"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="SphereShape3D" id="SphereShape3D_at6cw"]

[node name="PlayerController" type="CharacterBody3D" node_paths=PackedStringArray("interaction_raycast")]
script = ExtResource("1_v0iea")
interaction_raycast = NodePath("CameraController/Camera3D/InteractionRaycast")

[node name="StateChartDebugger" parent="." instance=ExtResource("2_h4iuc")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 404.0
offset_bottom = 361.0
grow_horizontal = 1
grow_vertical = 1
initial_node_to_watch = NodePath("../StateChart")

[node name="CrouchCheck" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("SphereShape3D_60tbe")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 9.31323e-10, 0, -9.31323e-10, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
mesh = SubResource("CapsuleMesh_cvnsp")

[node name="Standing" type="CollisionShape3D" parent="."]
transform = Transform3D(0.1, 9.31323e-10, 0, -9.31323e-10, 0.1, 0, 0, 0, 0.1, 1.77636e-15, -5.96046e-08, 0)
shape = SubResource("ConvexPolygonShape3D_6t5aa")

[node name="Crouching" type="CollisionShape3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, -0.5, 0)
shape = SubResource("SphereShape3D_at6cw")

[node name="CameraController" type="Node3D" parent="." node_paths=PackedStringArray("player_controller", "mouse_capture")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.97812e-09, -0.151922, 0)
script = ExtResource("2_x3wgy")
player_controller = NodePath("..")
mouse_capture = NodePath("../Components/MouseCapture")

[node name="Camera3D" type="Camera3D" parent="CameraController"]
transform = Transform3D(1, 2.42144e-08, 0, -2.42144e-08, 1, 0, 0, 0, 1, 0.0116844, 0.250094, 0)
current = true

[node name="GrappleRaycast" type="RayCast3D" parent="CameraController/Camera3D" node_paths=PackedStringArray("player_controller")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-06, -1, 0, 100, -4.37114e-08, 0, -0.05, 0)
script = ExtResource("3_3smsa")
player_controller = NodePath("../../..")

[node name="ColorRect" type="ColorRect" parent="CameraController/Camera3D"]
offset_left = 960.0
offset_top = 510.0
offset_right = 965.0
offset_bottom = 515.0
color = Color(1, 0, 0, 1)

[node name="InteractionRaycast" type="RayCast3D" parent="CameraController/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -1)
script = ExtResource("5_v5tf8")

[node name="SubViewport" type="SubViewport" parent="CameraController"]
disable_3d = true
transparent_bg = true
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Rope" parent="CameraController" instance=ExtResource("3_fkybt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.248879, -1)

[node name="Aim" type="Marker3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.7809e-09, 0.165887, -1)

[node name="Components" type="Node" parent="."]

[node name="MouseCapture" type="Node" parent="Components" node_paths=PackedStringArray("camera_controller", "player_controller")]
script = ExtResource("7_v5tf8")
camera_controller = NodePath("../../CameraController")
player_controller = NodePath("../..")
debug = true
sens = 0.002

[node name="GrappleController" type="Node" parent="Components" node_paths=PackedStringArray("ray")]
script = ExtResource("8_aa115")
ray = NodePath("../../CameraController/Camera3D/GrappleRaycast")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("3_6t5aa")

[node name="Player" type="Node3D" parent="."]

[node name="StateChart" type="Node" parent="."]
script = ExtResource("8_pu2lt")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("9_ukyrk")
metadata/_custom_type_script = "uid://c1vp0ojjvaby1"

[node name="Movement" type="Node" parent="StateChart/Root"]
script = ExtResource("10_7dp3o")
initial_state = NodePath("Grounded")

[node name="MovementState" type="Node" parent="StateChart/Root/Movement"]

[node name="Grounded" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("10_7dp3o")
initial_state = NodePath("Idle")

[node name="GroundedState" type="Node" parent="StateChart/Root/Movement/Grounded" node_paths=PackedStringArray("player_controller")]
script = ExtResource("12_qfo01")
player_controller = NodePath("../../../../..")

[node name="Idle" type="Node" parent="StateChart/Root/Movement/Grounded"]
script = ExtResource("11_h4iuc")

[node name="IdleState" type="Node" parent="StateChart/Root/Movement/Grounded/Idle" node_paths=PackedStringArray("player_controller")]
script = ExtResource("14_h4iuc")
player_controller = NodePath("../../../../../..")

[node name="OnMoving" type="Node" parent="StateChart/Root/Movement/Grounded/Idle"]
script = ExtResource("12_fd4e3")
to = NodePath("../../Moving")
event = &"onMoving"
delay_in_seconds = "0.0"

[node name="Moving" type="Node" parent="StateChart/Root/Movement/Grounded"]
script = ExtResource("10_7dp3o")
initial_state = NodePath("Walking")

[node name="MovingState" type="Node" parent="StateChart/Root/Movement/Grounded/Moving" node_paths=PackedStringArray("player_controller")]
script = ExtResource("16_fd4e3")
player_controller = NodePath("../../../../../..")

[node name="Walking" type="Node" parent="StateChart/Root/Movement/Grounded/Moving"]
script = ExtResource("11_h4iuc")

[node name="WalkingState" type="Node" parent="StateChart/Root/Movement/Grounded/Moving/Walking" node_paths=PackedStringArray("player_controller")]
script = ExtResource("17_igrcy")
player_controller = NodePath("../../../../../../..")

[node name="Sprinting" type="Node" parent="StateChart/Root/Movement/Grounded/Moving"]
script = ExtResource("11_h4iuc")

[node name="SprintingState" type="Node" parent="StateChart/Root/Movement/Grounded/Moving/Sprinting" node_paths=PackedStringArray("player_controller")]
script = ExtResource("18_fs7ks")
player_controller = NodePath("../../../../../../..")

[node name="Sliding" type="Node" parent="StateChart/Root/Movement/Grounded/Moving"]
script = ExtResource("11_h4iuc")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="SlidingState" type="Node" parent="StateChart/Root/Movement/Grounded/Moving/Sliding" node_paths=PackedStringArray("player_controller")]
script = ExtResource("20_aa115")
player_controller = NodePath("../../../../../../..")

[node name="OnIdle" type="Node" parent="StateChart/Root/Movement/Grounded/Moving"]
script = ExtResource("12_fd4e3")
to = NodePath("../../Idle")
event = &"onIdle"
delay_in_seconds = "0.0"

[node name="OnWalking" type="Node" parent="StateChart/Root/Movement/Grounded/Moving"]
script = ExtResource("12_fd4e3")
to = NodePath("../Walking")
event = &"onWalking"
delay_in_seconds = "0.0"

[node name="OnSprinting" type="Node" parent="StateChart/Root/Movement/Grounded/Moving"]
script = ExtResource("12_fd4e3")
to = NodePath("../Sprinting")
event = &"onSprinting"
delay_in_seconds = "0.0"

[node name="OnAirborne" type="Node" parent="StateChart/Root/Movement/Grounded/Moving"]
script = ExtResource("12_fd4e3")
to = NodePath("../../../Airborne")
event = &"onAirborne"
delay_in_seconds = "0.0"

[node name="OnSliding" type="Node" parent="StateChart/Root/Movement/Grounded/Moving"]
script = ExtResource("12_fd4e3")
to = NodePath("../Sliding")
event = &"onSliding"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="Airborne" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("10_7dp3o")
initial_state = NodePath("Jumping")

[node name="AirborneState" type="Node" parent="StateChart/Root/Movement/Airborne" node_paths=PackedStringArray("player_controller")]
script = ExtResource("19_v5tf8")
player_controller = NodePath("../../../../..")

[node name="Jumping" type="Node" parent="StateChart/Root/Movement/Airborne"]
script = ExtResource("11_h4iuc")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="OnGrounded" type="Node" parent="StateChart/Root/Movement/Airborne"]
script = ExtResource("12_fd4e3")
to = NodePath("../../Grounded")
event = &"onGrounded"
delay_in_seconds = "0.0"

[node name="Posture" type="Node" parent="StateChart/Root"]
script = ExtResource("10_7dp3o")
initial_state = NodePath("Standing")
metadata/_custom_type_script = "uid://jk2jm1g6q853"

[node name="Sliding" type="Node" parent="StateChart/Root/Posture"]
script = ExtResource("11_h4iuc")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="SlidingState" type="Node" parent="StateChart/Root/Posture/Sliding" node_paths=PackedStringArray("state_machine", "player_controller")]
script = ExtResource("20_aa115")
state_machine = NodePath("../../../../../StateMachine")
player_controller = NodePath("../../../../..")

[node name="Standing" type="Node" parent="StateChart/Root/Posture"]
script = ExtResource("11_h4iuc")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="StandingState" type="Node" parent="StateChart/Root/Posture/Standing" node_paths=PackedStringArray("state_machine", "player_controller")]
script = ExtResource("18_at6cw")
state_machine = NodePath("../../../../../StateMachine")
player_controller = NodePath("../../../../..")

[node name="Crouching" type="Node" parent="StateChart/Root/Posture"]
script = ExtResource("11_h4iuc")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="CrouchingState" type="Node" parent="StateChart/Root/Posture/Crouching" node_paths=PackedStringArray("state_machine", "player_controller")]
script = ExtResource("19_60tbe")
state_machine = NodePath("../../../../../StateMachine")
player_controller = NodePath("../../../../..")

[node name="OnStanding" type="Node" parent="StateChart/Root/Posture"]
script = ExtResource("12_fd4e3")
to = NodePath("../Standing")
event = &"onStanding"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="OnCrouching" type="Node" parent="StateChart/Root/Posture"]
script = ExtResource("12_fd4e3")
to = NodePath("../Crouching")
event = &"onCrouching"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="OnSliding" type="Node" parent="StateChart/Root/Posture"]
script = ExtResource("12_fd4e3")
to = NodePath("../Sliding")
event = &"onSlidingP"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="BaseState" type="Node" parent="." node_paths=PackedStringArray("state_machine", "player_controller")]
script = ExtResource("19_qugqj")
state_machine = NodePath("../StateMachine")
player_controller = NodePath("..")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("player_controller")]
unique_name_in_owner = true
script = ExtResource("13_7dp3o")
player_controller = NodePath("..")

[node name="HeadHitter" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1.5, 8.74228e-08, 0, -1.31134e-07, -1, 0, 0, 0)

[node name="SlideCheck" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -1, 0)

[connection signal="state_physics_processing" from="StateChart/Root/Movement/Grounded" to="StateChart/Root/Movement/Grounded/GroundedState" method="_on_grounded_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Grounded/Idle" to="StateChart/Root/Movement/Grounded/Idle/IdleState" method="_on_idle_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Grounded/Moving" to="StateChart/Root/Movement/Grounded/Moving/MovingState" method="_on_moving_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Movement/Grounded/Moving/Walking" to="StateChart/Root/Movement/Grounded/Moving/Walking/WalkingState" method="_on_walking_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Grounded/Moving/Walking" to="StateChart/Root/Movement/Grounded/Moving/Walking/WalkingState" method="_on_walking_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Movement/Grounded/Moving/Sprinting" to="StateChart/Root/Movement/Grounded/Moving/Sprinting/SprintingState" method="_on_sprinting_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Grounded/Moving/Sprinting" to="StateChart/Root/Movement/Grounded/Moving/Sprinting/SprintingState" method="_on_sprinting_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Movement/Grounded/Moving/Sliding" to="StateChart/Root/Movement/Grounded/Moving/Sliding/SlidingState" method="_on_sliding_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Grounded/Moving/Sliding" to="StateChart/Root/Movement/Grounded/Moving/Sliding/SlidingState" method="_on_sliding_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Airborne" to="StateChart/Root/Movement/Airborne/AirborneState" method="_on_airborne_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Posture/Standing" to="StateChart/Root/Posture/Standing/StandingState" method="_on_standing_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Posture/Standing" to="StateChart/Root/Posture/Standing/StandingState" method="_on_standing_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Posture/Crouching" to="StateChart/Root/Posture/Crouching/CrouchingState" method="_on_crouching_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Posture/Crouching" to="StateChart/Root/Posture/Crouching/CrouchingState" method="_on_crouching_state_physics_processing"]
